--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -7,10 +7,23 @@
     tools:context=".AccountActivity">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/success"
         android:layout_width="119dp"
         android:layout_height="116dp"
         android:text="SUCCES PAGE"
+        android:visibility="visible"
         tools:layout_editor_absoluteX="146dp"
-        tools:layout_editor_absoluteY="241dp" />
+        tools:layout_editor_absoluteY="241dp"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/signout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SIGN OUT"
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="122dp"
+        tools:layout_editor_absoluteY="389dp"
+        tools:ignore="MissingConstraints" />
+
 </android.support.constraint.ConstraintLayout>
