--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -70,7 +70,7 @@
         android:layout_below="@+id/passwordField"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="47dp"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColor="@color/cardview_light_background"
         app:cardCornerRadius="25dp"
         app:cardElevation="10dp">
 
@@ -82,14 +82,18 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginEnd="134dp"
-                android:layout_marginRight="134dp"
+                android:layout_marginStart="123dp"
+                android:layout_marginLeft="123dp"
+                android:layout_marginEnd="120dp"
+                android:layout_marginRight="120dp"
                 android:layout_marginBottom="15dp"
-                android:text="LOGIN"
-                android:textColor="#fff"
+                android:text="LOG IN"
+                android:textColor="#B22222"
                 tools:textSize="18sp" />
         </RelativeLayout>
 
@@ -100,7 +104,6 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="76dp"
         android:layout_marginRight="76dp"
