--- a/EMedCom_project/app/src/main/res/menu/home.xml
+++ b/EMedCom_project/app/src/main/res/menu/home.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_rewards"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Rewards"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_orders"
+        android:orderInCategory="100"
+        android:title="My Orders"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_history"
+        android:orderInCategory="100"
+        android:title="User History"
         app:showAsAction="never" />
 </menu>
